// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`airtableRecordToItem A 1`] = `
{
  "barcode": "",
  "box": "box A",
  "brand": "",
  "category": "category A",
  "details": "",
  "drawer": "",
  "id": "rec123",
  "location": "location A",
  "name": "item A",
  "photo": [],
  "price": 0,
  "ref-printed": false,
  "reference": "",
  "status": "acheté",
  "updated-on": "",
}
`;

exports[`getAllItems A no offset 1`] = `
{
  "records": [
    {
      "fields": {
        "barcode": "",
        "box": "box A",
        "brand": "",
        "category": "category A",
        "details": "",
        "drawer": "",
        "location": "location A",
        "name": "item A",
        "ref-printed": false,
        "reference": "",
        "status": "acheté",
        "updated-on": "",
      },
      "id": "rec123",
    },
  ],
}
`;

exports[`getAllItems B with offset 1`] = `
{
  "records": [
    {
      "fields": {
        "barcode": "",
        "box": "box A",
        "brand": "",
        "category": "category A",
        "details": "",
        "drawer": "",
        "location": "location A",
        "name": "item A",
        "ref-printed": false,
        "reference": "",
        "status": "acheté",
        "updated-on": "",
      },
      "id": "rec123",
    },
  ],
}
`;

exports[`getCommonListsFromItems A 1`] = `
{
  "boxes": [
    "",
    "box B",
  ],
  "categories": [
    "",
    "category B",
  ],
  "drawers": [
    "",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
  ],
  "locations": [
    "",
    "location A",
    "location B",
  ],
  "statuses": [
    "",
    "à donner",
    "à vendre",
    "acheté",
    "donné",
    "jeté",
    "new surprise status",
    "renvoyé",
    "vendu",
  ],
}
`;

exports[`getOneItem A 1`] = `
{
  "barcode": "",
  "box": "box A",
  "brand": "",
  "category": "category A",
  "details": "",
  "drawer": "",
  "id": "rec123",
  "location": "location A",
  "name": "item A",
  "photo": [],
  "price": 0,
  "ref-printed": false,
  "reference": "",
  "status": "acheté",
  "updated-on": "",
}
`;

exports[`pushItemRemotely A itemAA updated && no id should post 1`] = `
{
  "fields": {
    "barcode": "",
    "box": "box A",
    "brand": "",
    "category": "category A",
    "details": "",
    "drawer": "",
    "location": "location A",
    "name": "item A",
    "ref-printed": false,
    "reference": "",
    "status": "acheté",
    "updated-on": "",
  },
  "id": "rec123",
}
`;

exports[`pushItemRemotely A itemAA updated && no id should post 3`] = `
{
  "fields": {
    "status": "acheté",
  },
}
`;

exports[`pushItemRemotely B itemAA updated && his id should patch 1`] = `
{
  "fields": {
    "barcode": "",
    "box": "box A",
    "brand": "",
    "category": "category A",
    "details": "",
    "drawer": "",
    "location": "location A",
    "name": "item A",
    "ref-printed": false,
    "reference": "",
    "status": "acheté",
    "updated-on": "",
  },
  "id": "rec123",
}
`;

exports[`pushItemRemotely B itemAA updated && his id should patch 3`] = `
{
  "fields": {
    "status": "acheté",
  },
}
`;
